--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nodemon": "^2.0.19",
     "passport": "^0.6.0",
     "passport-google-oidc": "^0.1.0",
+    "passport-local": "^1.0.0",
     "socket.io": "^4.5.1"
   },
   "type": "module",
