--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "express-socket.io-session": "^1.3.5",
     "mongoose": "^6.5.1",
     "nodemon": "^2.0.19",
     "passport": "^0.6.0",
