--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "passport-local": "^1.0.0",
     "socket.io": "^4.5.1"
   },
-  "type": "module",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/RoyalTwo/eris.git"
@@ -34,5 +33,6 @@
   "bugs": {
     "url": "https://github.com/RoyalTwo/eris/issues"
   },
-  "homepage": "https://github.com/RoyalTwo/eris#readme"
+  "homepage": "https://github.com/RoyalTwo/eris#readme",
+  "type": "module"
 }
